# bazel-coverage-hang

./: .bazelignore  .bazelrc  BUILD.bazel  MODULE.bazel  README.md  reproduce.sh  shell.bzl  shell_bad.sh
